[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nakuru-project-idk"
version = "0.0.1"
authors = [
  { name="Lxns-Network", email="joinchang1206@gmail.com" },
]
description = "一款为 go-cqhttp 的正向 WebSocket 设计的 Python SDK，支持纯 CQ 码与消息链的转换处理"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "aiohttp",
    "pydantic",
    "Logbook",
    "async_lru"
]

[project.urls]
"Homepage" = "https://github.com/idoknow/nakuru-project-idk"
"Bug Tracker" = "https://github.com/idoknow/nakuru-project-idk/issues"